11_namespaces/01_connect_different_namespaces/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: database
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:5.7
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: database
spec:
  ports:
  - port: 3306
  selector:
    app: mysql

# apiVersion: v1
# kind: Service
# metadata:
#   name: mysql-service
#   namespace: database
# spec:
#   type: ClusterIP
#   ports:
#     - targetPort: 3306
#       port: 3306
